Prevent wrapping of tags line breaking too much

--- a/src/components/video/card/VideoCardTagList.less
+++ b/src/components/video/card/VideoCardTagList.less
@@ -6,10 +6,5 @@
   margin-bottom: 1em;
   margin-top: 0px;
   display: flex;
-  flex-flow: row wrap;
-
-  &__subjects-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
+  flex-wrap: wrap;
 }
